    . [#1059] 3.5.0: Build fails on FreeBSD arm64: fatal error: 'asm/hwcap.h' file not found
    . [#1077] Quick start build fails on Visual Studio 17 2022
    . [#1080] Fails to configure with Xcode generator
    . [#1094] vpIoTools::makeTempDirectory() fails to create a temporary directory inside
      a parent directory on Unix
----------------------------------------------
ViSP 3.5.0 (released February 15, 2022)
  - Contributors:
    . Fabien Spindler, Joudy Nader, Souriya Trinh, Julien Dufour, Ha Thuc Long,
      Christian Clauss, Olivier Kermorgant
  - New features and improvements
    . Bump default cxx standard to cxx17
    . Update 3rdparty/apriltag detector
    . Update 3rdparty/simdlib used for optimization
    . Update 3rdparty/stb_image used for image io
    . Update 3rdparty/catch for testing
    . Camera calibration model can now consider px/py aspect ratio and estimate
      a model where px = py
    . Introduce Bayer demosaicing also called debayering in vpImageConvert
    . UEye grabber now support Bayer 8 color mode
    . Introduce Occipital Structure Core RGB-D device support in vpOccipitalStructure
      class
    . Update to use Catch2 2.13.7
    . Improve video reader and writer classes to consider a sequence of non consecutive
      images
    . Improve camera intrinsic and extrinsic calibration tools
    . Compatibility with Visual Studio 17 2022
    . Capability to display TrueType font in display
  - Tutorials
    . New tutorial for FrankaSim that allows physical simulation of the Panda robot from
      Franka Emika, with a model that has beenaccurately identified from a real Franka
      robot using ViSP, ROS and CoppeliaSim.
      More info on http://wiki.ros.org/visp_ros
    . New tutorial: Deep learning object detection on NVIDIA GPU with TensorRT
    . New tutorial: Installation from source for Windows with Visual C++ 2022 (vc17)
    . New tutorial: Cross-compilation for UWP from Windows host with Visual C++ 2022
  - Bug fixed